# vodafone-station-cli

./: .gitignore  Dockerfile  cli.py  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: container.yaml  lint.yaml  pypi.yaml
